Adding HEADLESS as env var

--- a/.env-example
+++ b/.env-example
@@ -4,3 +4,4 @@ DEVELOPER_CHAT_ID=[DEVELOPER_CHAT_ID]
 DEFAULT_SETTINGS={"monitoring":true,"interval":5,"price":300}
 EMAIL=[email]
 PASSWORD=[password]
+HEADLESS=false
